--- a/DesktopDecoration/DesktopDecoration.vcxproj.filters
+++ b/DesktopDecoration/DesktopDecoration.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClInclude Include="config.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="ChristmasTree.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="AnimatedShapedFrame.cpp">
@@ -45,6 +48,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="ShapedFrame.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="ChristmasTree.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
